# ChemMoETransformer

./: BATCH.md  README.md  build.ipynb  pyproject.toml  test.ipynb
config/: default_config.yaml  example_moe_config.yaml
data/USPTO_480k/: vocab_smiles.txt
evaluation/: evaluate.py  metrics.py
models/: __init__.py  chemtransformer_model.py  embedding.py  moe_layer.py  transformer_layers.py
preprocessing/: data_split.py  preprocess_smiles.py
test/: test_dataset_utils.py  test_forward_pass.py  test_moe_layer.py
training/: train.py  trainer.py
utils/: config_parser.py  dataset_utils.py
